Pagina de detalhes do Hero

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -10,18 +10,4 @@
   </li>
 </ul>
 
-<div *ngIf="selectedHero">
-  <h2>{{ selectedHero.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{ selectedHero.id }}</div>
-  <div><span>name: </span>{{ selectedHero.name }}</div>
-
-  <div>
-    <label for="name">Hero name:</label>
-    <input
-      id="name"
-      [(ngModel)]="selectedHero.name"
-      placeholder="name"
-      type="text"
-    />
-  </div>
-</div>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
