Add material module

--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -14,8 +14,10 @@
       </button>
     </p>
 
-    <div *ngFor="let message of messageService.getMessages()">
-      {{ message }}
-    </div>
+    <mat-list>
+      <mat-list-item *ngFor="let message of messageService.getMessages()">
+        {{ message }}
+      </mat-list-item>
+    </mat-list>
   </mat-expansion-panel>
 </mat-accordion>
