--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,3 +1,5 @@
+
+
 <div *ngIf="hero">
   <h1>{{ hero.name | uppercase }} Details</h1>
 
@@ -7,6 +9,7 @@
         <mat-label>ID</mat-label>
         <input matInput disabled [value]="hero.id" />
       </mat-form-field>
+
       <mat-form-field>
         <mat-label>Hero name</mat-label>
         <input
@@ -18,5 +21,9 @@
         />
       </mat-form-field>
     </mat-card-content>
+
+    <mat-card-actions>
+      <button mat-raised-button (click)="goBack()">Go back</button>
+    </mat-card-actions>
   </mat-card>
 </div>
