Add delete hero

--- a/src/app/heroes/components/heroes/heroes.component.html
+++ b/src/app/heroes/components/heroes/heroes.component.html
@@ -17,6 +17,20 @@
     <mat-cell *matCellDef="let row"> {{ row.name }} </mat-cell>
   </ng-container>
 
+  <!-- actions -->
+  <ng-container matColumnDef="actions">
+    <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+    <mat-cell *matCellDef="let row">
+      <button
+        mat-icon-button
+        matTooltip="Delete this item"
+        (click)="delete(row); $event.stopPropagation()"
+      >
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-cell>
+  </ng-container>
+
   <!-- Header and Row Declarations -->
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row
